<resources>
    <string name="app_name">Authentication</string>
    <string name="email_or_username_hint">Email or Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="lang">English (US)</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next_string">Next</string>
    <string name="what_s_your_name">What\'s your name ?</string>
    <string name="enter_your_real_name">- Please, Enter your real name - </string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="todo">arrow</string>
    <string name="what_s_your_gender">What\'s your gender ?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="what_s_your_email">What\'s your email ?</string>
    <string name="email">Email</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_mobile_number">Sign up with mobile number</string>
    <string name="what_s_your_mobile_number">What\'s your mobile number ?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="date_default">Dec 26, 2000</string>
    <string name="calendar_vector">Calendar vector</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="arrow">arrow</string>
    <string name="password_nb">- Create a password with at leat 8 letters or numbers -\n- it should be something others can\'t guest -</string>
    <string name="email_username_or_password_incorrect">Email, Username or Password incorrect</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Rock Yoah Sanon</string>
    <string name="client_id">Client id : 102590</string>
    <string name="chat_bubble_for_messaging_service">Chat bubble for Messaging service</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="available_balance">Available balance :</string>
    <string name="cashout_button">Cashout button</string>
    <string name="transfer_button">Transfer button</string>
</resources>