<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/arrow"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/whats_your_email"
        android:layout_below="@id/arrow"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:text="@string/what_s_your_email"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal ="true"
        android:textColor="@color/black"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_edt"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="210dp"
        android:inputType="textEmailAddress"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/whats_your_phone"
        android:layout_below="@id/arrow"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:text="@string/what_s_your_mobile_number"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal ="true"
        android:textColor="@color/black"
        android:visibility="visible"
        />
    <Button
        android:id="@+id/sign_with_phone_btn"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_below="@id/email_edt"
        android:text="@string/sign_up_with_mobile_number"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_next_button_white"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="25dp"
        android:visibility="invisible"
        android:textAllCaps="false"
        />



    <EditText
        android:id="@+id/phone_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/mobile_number"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_edt"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="210dp"
        android:inputType="phone"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/sign_with_email_btn"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_below="@id/phone_edt"
        android:text="@string/sign_up_with_email"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_next_button_white"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="25dp"
        android:visibility="visible"
        android:textAllCaps="false"
        />


    <Button
        android:id="@+id/next_button"
        android:layout_below="@id/sign_with_phone_btn"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/next_string"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_next_button"
        android:textColor="@color/text_color_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="180dp"
        tools:ignore="VisualLintButtonSize"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/already_have_an_account_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/already_have_an_account"
        android:layout_below="@id/next_button"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textColor="@color/bg_next_button"
        />
</RelativeLayout>