<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/arrow"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/whats_your_name"
        android:layout_below="@id/arrow"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:text="@string/what_s_your_name"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal ="true"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/enter_your_real_name"
        android:layout_below="@id/whats_your_name"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:text="@string/enter_your_real_name"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/error_text_color"
        android:gravity="center"
        android:layout_centerHorizontal ="true"
        />

    <EditText
        android:id="@+id/firstname_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/first_name"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_edt"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:layout_marginTop="210dp"
        />

    <EditText
        android:id="@+id/lastname_edt"
        android:layout_below="@id/firstname_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/last_name"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_edt"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_below="@id/lastname_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/next_string"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_next_button"
        android:textColor="@color/text_color_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="175dp"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize"
        />

    <TextView
        android:id="@+id/already_have_an_account_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/already_have_an_account"
        android:layout_below="@id/next_button"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textColor="@color/bg_next_button"
        />



</RelativeLayout>