<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/arrow"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo" />




    <TextView
        android:id="@+id/whats_your_birthday"
        android:layout_below="@id/arrow"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:text="What's your birthday ?"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal ="true"
        android:textColor="@color/black"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/birthday_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/date_default"
        android:background="@drawable/shape_for_create_account_edt"
        android:textColor="@color/text_color_user_pass"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="210dp"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_below="@id/birthday_edt"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/next_string"
        android:gravity="center"
        android:background="@drawable/shape_for_create_account_next_button"
        android:textColor="@color/text_color_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="250dp"
        tools:ignore="VisualLintButtonSize"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/already_have_an_account_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/already_have_an_account"
        android:layout_below="@id/next_button"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textColor="@color/bg_next_button"
        />
</RelativeLayout>